Actions
Bug #4664
closedCPU->cpu_pri_data hasn't been used for years
Start date:
2014-03-01
Due date:
% Done:
100%
Estimated time:
Difficulty:
Bite-size
Tags:
Gerrit CR:
Description
Once upon a time, CPU->cpu_pri_data was used to store per IPL priority values. In early 2007, the only user (in i86_subr.s) got removed but the struct machcpu member remained.
Updated by Robert Mustacchi about 8 years ago
- Status changed from New to Resolved
- % Done changed from 80 to 100
- Tags deleted (
needs-triage)
Updated by Electric Monk about 8 years ago
git commit 32842aabdc7c6f8f0c6140a256cf42cf5404fefb
Author: Josef 'Jeff' Sipek <jeffpc@josefsipek.net> 4664 CPU->cpu_pri_data hasn't been used for years Reviewed by: Dan McDonald <danmcd@omniti.com> Reviewed by: Robert Mustacchi <rm@joyent.com> Reviewed by: Hans Rosenfeld <hans.rosenfeld@nexenta.com> Approved by: Robert Mustacchi <rm@joyent.com>
Actions